# docs

./: .gitignore  LVS.md  README.md  Shadowsocks.md  ab.md  docker.md  ffmpeg.md  fluentd.md  gitlab.md  keepalived+nginx.md  linux.md  nginx.md  openvpn.md  openvpn.sh  ros.md  test.md
chia/: bash.sh  chia.md
clickhouse/: docker-compose.yaml
ether/: init-eth-node.md  init-eth-node.sh
etherchain/: README.md  core-geth.sh  geth.sh  init-eth-node.md  mev-geth.sh  nvidia-oc.sh
ethereum/: ETH2.md  README.md  core-geth.sh  geth.sh  mev-geth.sh
golang/: go.md
java/: jvm.md
k6/: hello.js
kubernetes/: README.md  faq.md  install-ubuntu.sh  install.sh  kubernetes1.10.md  kubernetes1.14.md  kubernetes1.20.md  kubernetes1.5.MD  kubernetes1.6.md  kubernetes1.7.md  microk8s.md
linux/: LVM.MD  LVM.md  README.md  SIG.md  autossh.md  (+14 more)
python/: .dockerignore   README.md  pyproject.toml  uv.toml
python/manim/: start.py
python/src/concurrency/: asyncio_executor_process.py  asyncio_executor_thread.py  futures_process_pool_broken.py  futures_process_pool_map.py  futures_thread_pool_map.py  test.py
python/src/gitlab/: cleanup.py
python/src/ocr/: akaocr_test.py  ddddocr_test.py  ocr.py  ocrlib.py  orclib_test.py  ppocr_test.py  pytesseract_test.py
python/src/onnx/: test.py
python/src/prefect/: flow1.py
python/src/selenium/: .dockerignore   Dockerfile  docker-compose.yaml  docker-compose.yml  main.py  orclib_test.py  requirements.txt  test.py
python/src/selenium/deploy/: kube.yml
python/src/selenium/grid/: docker-compose.yml
python/src/tou/: main.py  tou.py
(+59 files in other folders)
